infra/istio/ingress/virtual-services/ecommerce-all.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ecommerce-all
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/main-gateway
  http:
    - match:
        - uri:
            prefix: /admin-backoffice
      rewrite:
        uri: /
      route:
        - destination:
            host: admin-backoffice-service.apps-core.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /analytics-ingest
      rewrite:
        uri: /
      route:
        - destination:
            host: analytics-ingest-service.apps-async.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /api-gateway
      rewrite:
        uri: /
      route:
        - destination:
            host: api-gateway.apps-public.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /attribution
      rewrite:
        uri: /
      route:
        - destination:
            host: attribution-service.apps-async.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /audit
      rewrite:
        uri: /
      route:
        - destination:
            host: audit-service.apps-async.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /auth
      rewrite:
        uri: /
      route:
        - destination:
            host: auth-service.apps-core.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /cart
      rewrite:
        uri: /
      route:
        - destination:
            host: cart-service.apps-core.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /conversion-webhook
      rewrite:
        uri: /
      route:
        - destination:
            host: conversion-webhook.apps-public.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /feature-flag
      rewrite:
        uri: /
      route:
        - destination:
            host: feature-flag-service.apps-core.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /landing
      rewrite:
        uri: /
      route:
        - destination:
            host: landing-service.apps-public.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /notification
      rewrite:
        uri: /
      route:
        - destination:
            host: notification-service.apps-async.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /offer
      rewrite:
        uri: /
      route:
        - destination:
            host: offer-service.apps-core.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /product
      rewrite:
        uri: /
      route:
        - destination:
            host: product-service.apps-core.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /redirect
      rewrite:
        uri: /
      route:
        - destination:
            host: redirect-service.apps-public.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /reporting
      rewrite:
        uri: /
      route:
        - destination:
            host: reporting-service.apps-async.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /storefront
      rewrite:
        uri: /
      route:
        - destination:
            host: storefront-service.apps-public.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /user
      rewrite:
        uri: /
      route:
        - destination:
            host: user-service.apps-core.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: storefront-service.apps-public.svc.cluster.local
            port:
              number: 8080
